--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-image:url("https://i.imgur.com/FESiVv4.jpg");
+  background-image:url("https://i.imgur.com/GhQZhaO.jpg");
   background-size: 100% 100%;
 
 }
